2010-04-07  Jaroslav Hajek  <highegg@gmail.com>

	* Sparse.cc (Sparse<T>::index (const idx_vector&, bool)): Use shallow
	copy when column is indexed by colon.

2010-04-07  Jaroslav Hajek  <highegg@gmail.com>

	* Sparse.cc (lblookup): Move in front of Sparse<T>::delete_elements.

2010-04-07  Jaroslav Hajek  <highegg@gmail.com>

	* str-vec.h (string_vector::string_vector (const Array<std::string>)):
	New constructor.

2010-04-06  Jaroslav Hajek  <highegg@gmail.com>

	* idx-vector.cc (idx_vector::complement): Rewrite.

2010-04-06  Jaroslav Hajek  <highegg@gmail.com>

	* Sparse.cc (Sparse<T>::maybe_delete_elements): Rename to
	delete_elements. Use const reference arguments.
	(Sparse<T>::delete_elements (const idx_vector&, const idx_vector&)):
	Rewrite.
	(Sparse<T>::maybe_delete_elements (int dim, const idx_vector&)): New
	overload.
	(Sparse<T>::maybe_delete_elements (Array<idx_vector>&)): Remove
	overload.

2010-04-06  Jaroslav Hajek  <highegg@gmail.com>

	* idx-vector.cc, Array-util.h, Array-util.cc: Reverse effects of
	4e64fbbd5c58.

2010-04-02  John W. Eaton  <jwe@octave.org>

	* Array-util.cc, idx-vector.cc, idx-vector.h: Style fixes.

2010-04-02  John W. Eaton  <jwe@octave.org>

	* idx-vector.cc (idx_vector::idx_vector (const Range&)):
	Move here from idx-vector.h.  Allow non-integer values in ranges,
	but warn by default (for Matlab compatibility).
	* Array-util.h, Array-util.cc (gripe_invalid_index): New arg, ERR.
	If ERR is false, generate warning instead of error.

2010-04-02  Jaroslav Hajek  <highegg@gmail.com>

	* Sparse.cc (Sparse<T>::maybe_delete_elements): Rewrite. Optimize for
	sparse column vectors.

2010-04-01  Jaroslav Hajek  <highegg@gmail.com>

	* mx-inlines.cc: Declare all loops as throw (). Ditto for
	corresponding applier arguments.
	(do_mx_check): New applier.
	(logical_value): Do not throw exceptions.
	* mx-op-defs.h (SNANCHK, MNANCHK): New helper macros.
	(MS_BOOL_OP, SM_BOOL_OP, MM_BOOL_OP, NDS_BOOL_OP, SND_BOOL_OP,