@@ -2,6 +2,7 @@
 
 Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008
               Andy Adler
+Copyright (C) 2010 VZLU Prague
 
 This file is part of Octave.
 
