@@ -1,3 +1,8 @@
+2010-04-08  Jaroslav Hajek  <highegg@gmail.com>
+
+	* dim-vector.h (dim_vector::concat): Ignore zero_by_zero, but not
+	all_zero arrays in concatenation (like Matlab).
+
 2010-04-07  Jaroslav Hajek  <highegg@gmail.com>
 
 	* Sparse.cc (Sparse<T>::index (const idx_vector&, bool)): Use shallow
